frontend/tests/cases/positive/polymorphism/polyPoly.gr

polyPoly : forall {a : Type, k : Coeffect, c : k} . a [c*((1+1) : k)] -> (a, a) [c]
polyPoly [x] = [(x, x)]

app : Int [4] -> (Int, Int) [2]
app [x] = polyPoly [x]

go : (Int, Int) [2]
go = app [42]