frontend/tests/cases/negative/flat.gr
flatten : forall (c : Nat, d : Nat) . (Int [c+1]) [d+1] -> Int [(c+1) * (d+1)]
flatten [xbox] = let [x] = xbox in [x]
